# dracon-terminal-engine

./: .gitattributes  AGENTS.md  AI_GUIDE.md  AUDIT.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  MANUAL_TESTING_REPORT.md  README.md  RESEARCH.md  TASKS.md  TESTING.md  TODO.md  UI_IMPROVEMENTS.md  audit-2026-06-03.md  audit-tastlist.md  audit.md  autoresearch.ideas.md  autoresearch.md  bench_showcase.sh  dracon.toml  leftoff.md  note.md  session-audit.md  showcase-audit.md  showcase.sh  showcase_audit.md  spec.md  tasklist.md  tasks.md  todo-showcase-audit.md  todo-tiles-techniques.md  todo.md
.archive/: AUDIT.md  AUDIT_REPORT.md  ENRICHMENT.md  MIGRATION.md  RESEARCH.md  TODO_UI_IMPROVEMENTS.md  todo.md
.archive/.ralph/: port-tiles-v2.md  scene-enrichment.md  scene-mouse-handling.md  scene-mouse-handling.state.json  showcase-audit.md  showcase-upgrades.md  showcase-upgrades.state.json  tier2-scene-upgrades.state.json  todo-cleanup.md  ui-audit-loop.state.json
.archive/plans/: 2026-05-13-showcase-enhancement-1.0.md  2026-05-13-showcase-performance-fix-2.0.md
.cargo/: config.toml
.dracon/: project-state.md
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  plugin-ci.yml  release.yml
.pi/goals/: active_goal_2026060210142910_mpwf8bxo-ro9ioy.md  active_goal_2026060219053523_mpwy7c05-pv1x7v.md  active_goal_2026060300051666_mpx8wqk8-ufygy4.md  active_goal_2026060301145306_mpxbe93c-pcowlv.md  active_goal_2026060313173580_mpy17nzz-oxdbf4.md  active_goal_2026060315074613_mpy55ck6-rznuik.md  active_goal_2026060318411632_mpycrwyo-kxbguo.md  active_goal_2026060412570856_mpzfx7pu-eumc86.md  active_goal_2026060415205408_mpzl237p-mhnf3b.md
.ralph/: audit-continue-2.md  audit-continue-2.state.json  audit-continue.md  audit-continue.state.json  audit-maintenance.state.json  audit-tasks-loop-v2.md  audit-tasks-loop-v2.state.json  audit-tasks-loop-v3.md  audit-tasks-loop-v3.state.json  audit-tasks-loop.md  audit-tasks-loop.state.json  audit-tasks-v4.md  audit-tasks-v4.state.json  audit-tasks.md  audit-tasks.state.json  port-tiles-techniques.md  port-tiles-techniques.state.json  port-tiles-v2.state.json  scene-enrichment.md  scene-enrichment.state.json  showcase-audit.md  showcase-audit.state.json  tier2-scene-upgrades.md  tier2-scene-upgrades.state.json  todo-cleanup.state.json  todo-fix.md  todo-fix.state.json  ui-audit-loop.md  ui-audit-loop.state.json
.ralph/loops/: audit-maintenance.md  audit-tasks-loop-v3.state.json  audit-tasks-loop.md  audit-tasks-v4.md  audit-tasks.md  audit-tasks.state.json
.scripts/: doc-cleanup.sh
.sisyphus/plans/: fix-showcase-child-terminal.md
.until-done/: tasks.yaml
archive/: todo-fix.md
benches/: framework_benchmarks.rs
completions/: bash  fish  zsh
crates/cargo-dracon/: Cargo.toml
crates/cargo-dracon/src/: main.rs
crates/cargo-dracon/src/templates/: list.rs  simple.rs  widget.rs
crates/cargo-dracon/tests/: cli.rs
crates/dracon-macros/: Cargo.toml
crates/dracon-macros/src/: lib.rs
examples/: arena.rs  basic_raw.rs  color_picker_debug.rs  command_dashboard.rs  cyberpunk_dashboard.rs  demo.rs  desktop.rs  event_bus_demo.rs  form_demo.rs  form_widget.rs  framework_chat.rs  framework_demo.rs  framework_file_manager.rs  framework_widgets.rs  from_toml.rs  from_toml.toml  game_loop.rs  git_tui.rs  git_tui.rs.bak  god_mode.rs  ide.rs  image_demo.rs  input_debug.rs  menu_demo.rs  modal_demo.rs  network_client.rs  plugin_demo.rs  rich_text_demo.rs  scene_router_demo.rs  showcase.rs  sqlite_browser.rs  tabbed_panels.rs  table_widget.rs  text_editor_demo.rs  theme_switcher.rs  todo_app.rs  tree_navigator.rs  tutorial_app.rs  widget_gallery.rs  widget_tutorial.rs
examples/_apps/: chat_client.rs  dashboard_builder.rs  file_manager.rs  system_monitor.rs
examples/_cookbook/: accessibility.rs  autocomplete.rs  calendar.rs  cell_pool.rs  command_bindings.rs  data_table.rs  debug_overlay.rs  form_validation.rs  log_monitor.rs  menu_system.rs  notification_center.rs  plugin_demo.rs  rich_text.rs  scrollable_content.rs  split_resizer.rs  stat_widget_plugin.rs  tabbed_panels.rs  tree_navigator.rs  widget_gallery.rs
examples/_plugins/: Cargo.toml  build.rs  lib.rs  stat_widget.rs  welcome_widget.rs
examples/showcase/: audit-report.md  data.rs  main.rs  render.rs  showcase_audit.md  state.rs  widget.rs
extensions/: README.md
extensions/lsp-server/: .gitignore  Cargo.toml
extensions/lsp-server/src/: main.rs
extensions/vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json  tslint.json
plans/: 2026-05-12-dracon-amazing-roadmap-1.0.md  2026-05-13-mouse-coordinate-audit-fix-1.0.md  2026-05-13-post-review-fixes-1.0.md  2026-05-13-showcase-choppiness-investigation-v1.md  2026-05-13-showcase-performance-fix-1.0.md
proptest-regressions/framework/: layout.txt
src/: contracts.rs  error.rs  layout.rs  lib.rs  main.rs  system.rs  text.rs  utils.rs
src/backend/: mod.rs  tty.rs
src/compositor/: engine.rs  filter.rs  mod.rs  plane.rs  pool.rs  size_test.rs
src/core/: mod.rs  terma.rs  terminal.rs
src/framework/: animation.rs  app.rs  (+22 more)
tests/: accessibility_test.rs  animation_boundary_test.rs  app_tick_test.rs  async_command_runner_test.rs  breadcrumbs_test.rs  button_test.rs  clipboard_test.rs  command_output_test.rs  command_palette_test.rs  complex_integration_test.rs  compositor_size_test.rs  compositor_stress_test.rs  compositor_test.rs  context_menu_test.rs  debug_overlay_test.rs  dragdrop_test.rs  editor_smoke_test.rs  event_bus_test.rs  event_handler_test.rs  example_quit_test.rs  example_smoke_test.rs  filter_test.rs  focus_test.rs  form_validation_test.rs  form_widget_test.rs  framework_benchmarks.rs  gauge_test.rs  hitzone_test.rs  input_reader_test.rs  label_test.rs  menu_test.rs  modal_widget_test.rs  multi_widget_test.rs  network_widget_test.rs  panel_test.rs  performance_benchmarks.rs  phase1_widget_test.rs  phase2_3_4_widget_test.rs  plugin_test.rs  profiler_test.rs  (+76 more)
(+149 files in other folders)
