[package]
name = "dracon-terminal-engine"
version = "29.11.347"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dracon <dracon@void>"]
readme = "README.md"
description = "A terminal application framework for Rust — App, widgets, compositor, themes, and 20 built-in themes"
repository = "https://github.com/DraconDev/dracon-terminal-engine"
homepage = "https://github.com/DraconDev/dracon-terminal-engine"
documentation = "https://docs.rs/dracon-terminal-engine"
keywords = ["terminal", "tui", "framework", "compositor", "cli"]
categories = ["command-line-interface", "rendering"]

[dependencies]
bitflags = { version = "2.4", features = ["serde"] }
ratatui = { version = "0.29", default-features = false }
unicode-width = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
signal-hook = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sysinfo = "0.32"
syntect = "5.2"
tokio = { version = "1.38.0", optional = true, features = ["rt-multi-thread", "sync", "time", "macros", "process", "io-util"] }
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[dev-dependencies]
rand = "0.8"
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "system_monitor"
path = "examples/_apps/system_monitor.rs"

[[example]]
name = "file_manager"
path = "examples/_apps/file_manager.rs"

[[example]]
name = "chat_client"
path = "examples/_apps/chat_client.rs"

[[example]]
name = "dashboard_builder"
path = "examples/_apps/dashboard_builder.rs"

[[example]]
name = "widget_gallery"
path = "examples/_cookbook/widget_gallery.rs"

[[example]]
name = "tree_navigator"
path = "examples/_cookbook/tree_navigator.rs"

[[example]]
name = "log_monitor"
path = "examples/_cookbook/log_monitor.rs"

[[example]]
name = "tabbed_panels"
path = "examples/_cookbook/tabbed_panels.rs"

[[example]]
name = "data_table"
path = "examples/_cookbook/data_table.rs"

[[example]]
name = "split_resizer"
path = "examples/_cookbook/split_resizer.rs"

[[example]]
name = "command_bindings"
path = "examples/_cookbook/command_bindings.rs"

[[example]]
name = "menu_system"
path = "examples/_cookbook/menu_system.rs"

[[example]]
name = "debug_overlay"
path = "examples/_cookbook/debug_overlay.rs"

[[example]]
name = "showcase"
path = "examples/showcase/main.rs"

[[example]]
name = "desktop"
path = "examples/desktop.rs"

[[example]]
name = "form_demo"
path = "examples/form_demo.rs"

[[example]]
name = "framework_file_manager"
path = "examples/framework_file_manager.rs"

[[example]]
name = "game_loop"
path = "examples/game_loop.rs"

[[example]]
name = "input_debug"
path = "examples/input_debug.rs"

[[example]]
name = "modal_demo"
path = "examples/modal_demo.rs"

[[example]]
name = "text_editor_demo"
path = "examples/text_editor_demo.rs"

[[example]]
name = "theme_switcher"
path = "examples/theme_switcher.rs"

[[example]]
name = "widget_tutorial"
path = "examples/widget_tutorial.rs"

[[example]]
name = "form_widget"
path = "examples/form_widget.rs"

[[example]]
name = "table_widget"
path = "examples/table_widget.rs"

[[example]]
name = "ide"
path = "examples/ide.rs"

[[example]]
name = "git_tui"
path = "examples/git_tui.rs"

[[example]]
name = "sqlite_browser"
path = "examples/sqlite_browser.rs"

[[example]]
name = "plugin_demo"
path = "examples/plugin_demo.rs"

[features]
default = []
async = ["tokio"]

[[bench]]
name = "framework_benchmarks"
harness = false