[package]
name = "dracon-terminal-engine"
version = "0.1.10" # Must match CHANGELOG.md latest; prior auto-incrementing build numbers were replaced by semver
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Dracon <dracon@void>"]
readme = "README.md"
description = "A terminal application framework for Rust with composable widgets, z-indexed compositor, themes, and TextEditor"
repository = "https://github.com/DraconDev/dracon-terminal-engine"
homepage = "https://github.com/DraconDev/dracon-terminal-engine"
documentation = "https://docs.rs/dracon-terminal-engine"
keywords = ["terminal", "tui", "framework", "compositor", "cli"]
categories = ["command-line-interface", "gui"]

# Exclude files that are not part of the library
exclude = [
    ".archive/**",
    ".github/**",
    ".dracon/**",
    ".ralph/**",
    ".scripts/**",
    "extensions/**",
    "rust_out",
    "rust_out/**",
    ".sisyphus/**",
    ".until-done/**",
    "plans/**",
    "AUDIT.md",
    "TODO.md",
    "audit*.md",
    "tasklist.md",
    "tasks.md",
    "Cargo.toml.orig",
]

[features]
# Enable debug event logging (mouse/key events to stderr)
debug_events = []
# Enable async runtime support (tokio + reqwest for HTTP)
async = ["dep:tokio", "dep:reqwest"]
# Enable tracing/structured logging
tracing = ["dep:tracing", "dep:tracing-subscriber"]
# Enable system monitoring (CPU, memory, disk, processes) via sysinfo
system = ["dep:sysinfo"]
# Enable syntax highlighting via syntect
syntax-highlighting = ["dep:syntect"]
# Enable sixel image support (stub — decoding not yet implemented)
sixel = []
# Enable SQLite support via rusqlite
sqlite = ["dep:rusqlite"]
# Default features: system + syntax highlighting for backward compatibility
default = ["system", "syntax-highlighting"]

[dependencies]
bitflags = { version = "2.4", features = ["serde"] }
ratatui = { version = "0.30", default-features = false }
unicode-width = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
signal-hook = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sysinfo = { version = "0.32", optional = true }
syntect = { version = "5.2", optional = true }
tokio = { version = "1.38.0", optional = true, features = ["rt-multi-thread", "sync", "time", "macros", "process", "io-util", "fs"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
tracing = { version = "0.1", optional = true, default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", optional = true, default-features = false, features = ["env-filter", "fmt"] }
unicode-segmentation = "1.10"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[dev-dependencies]
rand = "0.8"
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
insta = { version = "1.40", features = ["yaml"] }

[[example]]
name = "system_monitor"
path = "examples/_apps/system_monitor.rs"

[[example]]
name = "file_manager"
path = "examples/_apps/file_manager.rs"

[[example]]
name = "chat_client"
path = "examples/_apps/chat_client.rs"

[[example]]
name = "dashboard_builder"
path = "examples/_apps/dashboard_builder.rs"

[[example]]
name = "widget_gallery"
path = "examples/_cookbook/widget_gallery.rs"

[[example]]
name = "tree_navigator"
path = "examples/_cookbook/tree_navigator.rs"

[[example]]
name = "log_monitor"
path = "examples/_cookbook/log_monitor.rs"

[[example]]
name = "tabbed_panels"
path = "examples/_cookbook/tabbed_panels.rs"

[[example]]
name = "data_table"
path = "examples/_cookbook/data_table.rs"

[[example]]
name = "split_resizer"
path = "examples/_cookbook/split_resizer.rs"

[[example]]
name = "command_bindings"
path = "examples/_cookbook/command_bindings.rs"

[[example]]
name = "menu_system"
path = "examples/_cookbook/menu_system.rs"

[[example]]
name = "debug_overlay"
path = "examples/_cookbook/debug_overlay.rs"

[[example]]
name = "rich_text"
path = "examples/_cookbook/rich_text.rs"

[[example]]
name = "calendar"
path = "examples/_cookbook/calendar.rs"

[[example]]
name = "autocomplete"
path = "examples/_cookbook/autocomplete.rs"

[[example]]
name = "form_validation"
path = "examples/_cookbook/form_validation.rs"

[[example]]
name = "scrollable_content"
path = "examples/_cookbook/scrollable_content.rs"

[[example]]
name = "showcase"
path = "examples/showcase/main.rs"

[[example]]
name = "desktop"
path = "examples/desktop.rs"

[[example]]
name = "form_demo"
path = "examples/form_demo.rs"

[[example]]
name = "framework_file_manager"
path = "examples/framework_file_manager.rs"

[[example]]
name = "game_loop"
path = "examples/game_loop.rs"

[[example]]
name = "input_debug"
path = "examples/input_debug.rs"

[[example]]
name = "modal_demo"
path = "examples/modal_demo.rs"

[[example]]
name = "text_editor_demo"
path = "examples/text_editor_demo.rs"

[[example]]
name = "theme_switcher"
path = "examples/theme_switcher.rs"

[[example]]
name = "widget_tutorial"
path = "examples/widget_tutorial.rs"

[[example]]
name = "form_widget"
path = "examples/form_widget.rs"

[[example]]
name = "table_widget"
path = "examples/table_widget.rs"

[[example]]
name = "ide"
path = "examples/ide.rs"

[[example]]
name = "git_tui"
path = "examples/git_tui.rs"

[[example]]
name = "sqlite_browser"
path = "examples/sqlite_browser.rs"

[[example]]
name = "plugin_demo"
path = "examples/plugin_demo.rs"

[[example]]
name = "stat_widget_plugin"
path = "examples/_cookbook/stat_widget_plugin.rs"

[[example]]
name = "accessibility"
path = "examples/_cookbook/accessibility.rs"

[[example]]
name = "cell_pool"
path = "examples/_cookbook/cell_pool.rs"

[[example]]
name = "notification_center"
path = "examples/_cookbook/notification_center.rs"

[[example]]
name = "event_bus_demo"
path = "examples/event_bus_demo.rs"

[[example]]
name = "network_client"
path = "examples/network_client.rs"

[[example]]
name = "scene_router_demo"
path = "examples/scene_router_demo.rs"

[[example]]
name = "todo_app"
path = "examples/todo_app.rs"
required-features = ["sqlite"]

[[example]]
name = "tutorial_app"
path = "examples/tutorial_app.rs"

[[example]]
name = "framework_demo"
path = "examples/framework_demo.rs"
required-features = ["system"]

[[bench]]
name = "framework_benchmarks"
harness = false
