[package]
name = "dracon-macros"
version = "0.1.0"
edition = "2021"
authors = ["Dracon Terminal Engine Team"]
description = "Procedural macros for Dracon Terminal Engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DraconDev/dracon-terminal-engine"
keywords = ["terminal", "tui", "macros", "dracon"]
categories = ["command-line-interface"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
dracon-terminal-engine = { path = "../.." }