[package]
name = "dracon-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Dracon Team"]
description = "LSP server for Dracon TUI Preview VSCode extension"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dracon-team/dracon-terminal-engine"
keywords = ["tui", "terminal", "lsp", "vscode", "preview"]
categories = ["development-tools"]

[[bin]]
name = "dracon-lsp"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
